--- a/index.html
+++ b/index.html
@@ -1,7 +1,105 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <h1 class="margin-bot-none">JORENS MERENJANU</h1>
+        <h3 class="font-light margin-top-none">Designer & Developer</h3>
+        <p>
+            Hi! I'm Jorens. I'm a freelance web designer & developer
+            from Latvia who has a deep passion for coding and design.
+            In my spare time I like to draw, cook, code and design websites.
+        </p>
+        <div class="link" onclick="scrollToWork()">
+            See my work
+        </div>
+        <h2>My skills</h2>
+        <p>I have experience with <b>web design</b>, <b>web development</b>, <b>desktop app development</b>, <b>mobile app development</b>
+            And I have experience with many different tools, frameworks, languages, namely:</p>
+        <ul>
+            <li>
+                Web design
+            </li>
+            <li>
+                Web development
+            </li>
+            <li>
+                Desktop software development
+            </li>
+            <li>
+                App development
+            </li>
+            <li>
+                React
+            </li>
+            <li>
+                Angular
+            </li>
+            <li>
+                JavaScript
+            </li>
+            <li>
+                HTML
+            </li>
+            <li>
+                CSS
+            </li>
+            <li>
+                CSS
+            </li>
+            <li>
+                MongoDB
+            </li>
+            <li>
+                MySQL
+            </li>
+            <li>
+                React Native
+            </li>
+            <li>
+                Flutter
+            </li>
+            <li>
+                Ionic
+            </li>
+            <li>
+                Android API
+            </li>
+            <li>
+                Figma
+            </li>
+            <li>
+                Golang
+            </li>
+            <li>
+                C++
+            </li>
+            <li>
+                Java
+            </li>
+        </ul>
+        <h2>What I offer</h2>
+        <ul>
+            <li>Website design & development (backend & frontend)</li>
+            <li>Dekstop app design & development</li>
+            <li>Mobile app design & development</li>
+            <li>Great communication</li>
+        </ul>
+        <h2 id="my-work">My work</h2>
+        <p>Here you can see samples of work that I've done</p>
+        <h4>
+            Design:
+        </h4>
+            <ul>
+                <li>Interior design - <a href="images/interior_design_desktop.png">desktop</a> | <a href="images/interior_design_mobile.png">mobile</a></li>
+            </ul>
+
+        <script>
+            function scrollToWork(){
+                document.getElementById("my-work").scrollIntoView();
+            }
+        </script>
+    </body>
 </html>
