--- a/index.html
+++ b/index.html
@@ -20,18 +20,6 @@
             And I have experience with many different tools, frameworks, languages, namely:</p>
         <ul>
             <li>
-                Web design
-            </li>
-            <li>
-                Web development
-            </li>
-            <li>
-                Desktop software development
-            </li>
-            <li>
-                App development
-            </li>
-            <li>
                 React
             </li>
             <li>
@@ -47,13 +35,13 @@
                 CSS
             </li>
             <li>
-                CSS
-            </li>
-            <li>
                 MongoDB
             </li>
             <li>
                 MySQL
+            </li>
+            <li>
+                PostgreSQL
             </li>
             <li>
                 React Native
@@ -86,6 +74,7 @@
             <li>Dekstop app design & development</li>
             <li>Mobile app design & development</li>
             <li>Great communication</li>
+            <li>Delivering on time</li>
         </ul>
         <h2 id="my-work">My work</h2>
         <p>Here you can see samples of work that I've done</p>
