--- a/index.html
+++ b/index.html
@@ -93,8 +93,26 @@
             <ul>
                 <li>Interior design - <a href="images/interior_design_desktop.png">desktop</a> | <a href="images/interior_design_mobile.png">mobile</a></li>
             </ul>
-
+        
+        <div style="display: none">
+            Google Analytics events test.
+            <a href="test.css"></a>
+            <a href="othertest.css"></a>
+            <a href="thirdtest.css"></a>
+        </div>
         <script>
+
+            let links = document.getElementsByTagName("a");
+
+            for(let link of links){
+                link.addEventListener("click", function(){
+                    gtag("event", "link clicked", {
+                        "event_category": "general",
+                        "event_label": link.getAttribute("href")
+                    })
+                })
+            }
+
             function scrollToWork(){
                 document.getElementById("my-work").scrollIntoView();
             }
