added link contents

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         
         <div style="display: none">
             Google Analytics events test.
-            <a href="test.css"></a>
-            <a href="othertest.css"></a>
-            <a href="thirdtest.css"></a>
+            <a href="test.css">test.css</a>
+            <a href="othertest.css">othertest.css</a>
+            <a href="thirdtest.css">thirdtest.css</a>
         </div>
         <script>
 
