--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </head>
     <body>
         <h1 class="margin-bot-none">JORENS MERENJANU</h1>
-        <h3 class="font-light margin-top-none">Designer & Developer</h3>
+        <h3 class="font-light margin-top-none">Full stack Developer & Designer</h3>
         <p>
-            Hi! I'm Jorens. I'm a freelance web designer & developer
+            Hi! I'm Jorens. I'm a full stack developer & designer
             from Latvia who has a deep passion for coding and design.
             In my spare time I like to draw, cook, code and design websites.
         </p>
