--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <h2>My skills</h2>
         <p>I have experience with <b>web design</b>, <b>web development</b>, <b>desktop app development</b>, <b>mobile app development</b>
-            And I have experience with many different tools, frameworks, languages:</p>
+            And I have experience with many different tools, frameworks, languages, most notably:</p>
         <ul id="skills-list">
 
         </ul>
@@ -60,7 +60,7 @@
         <h2 id="my-work">My work</h2>
         <p>Here you can see samples of work that I've done</p>
         <h4>
-            Design:
+            Development:
         </h4>
             <ul>
                 <li>Interior design - <a href="images/interior_design_desktop.png">desktop</a> | <a href="images/interior_design_mobile.png">mobile</a></li>
