--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             Development:
         </h4>
             <ul>
-                <li>Interior design - <a href="images/interior_design_desktop.png">desktop</a> | <a href="images/interior_design_mobile.png">mobile</a></li>
+                <li><a href="my-work/football-ticket-shop.html">Football ticket shop</a></li>
             </ul>
         
         <div style="display: none">
