--- a/index.html
+++ b/index.html
@@ -33,38 +33,41 @@
         </script>
     </head>
     <body>
-        <h1 class="margin-bot-none">JORENS MERENJANU</h1>
-        <h3 class="font-light margin-top-none">Full stack Developer & Designer</h3>
-        <p>
-            Hi! I'm Jorens. I'm a full stack developer & designer
-            from Latvia who has a deep passion for coding and design.
-            In my spare time I like to draw, cook, code and design websites.
-        </p>
-        <div class="link" onclick="scrollToWork()">
-            See my work
-        </div>
-        <h2>My skills</h2>
-        <p>I have experience with <b>web design</b>, <b>web development</b>, <b>desktop app development</b>, <b>mobile app development</b>
-            And I have experience with many different tools, frameworks, languages, most notably:</p>
-        <ul id="skills-list">
+        <div class="content">
+            <h1 class="margin-bot-none">JORENS MERENJANU</h1>
+            <h3 class="font-light margin-top-none">Full stack Developer & Designer</h3>
+            <p>
+                Hi! I'm Jorens. I'm a full stack developer & designer
+                from Latvia who has a deep passion for coding and design.
+                In my spare time I like to draw, cook, code and design websites.
+            </p>
+            <div class="link" onclick="scrollToWork()">
+                See my work
+            </div>
+            <h2>My skills</h2>
+            <p>I have experience with <b>web design</b>, <b>web development</b>, <b>desktop app development</b>, <b>mobile app development</b>
+                And I have experience with many different tools, frameworks, languages, most notably:</p>
+            <ul id="skills-list">
 
-        </ul>
-        <h2>What I offer</h2>
-        <ul>
-            <li>Website design & development (backend & frontend)</li>
-            <li>Dekstop app design & development</li>
-            <li>Mobile app design & development</li>
-            <li>Great communication</li>
-            <li>Delivering on time</li>
-        </ul>
-        <h2 id="my-work">My work</h2>
-        <p>Here you can see samples of work that I've done</p>
-        <h4>
-            Development:
-        </h4>
+            </ul>
+            <h2>What I offer</h2>
+            <ul>
+                <li>Website design & development (backend & frontend)</li>
+                <li>Dekstop app design & development</li>
+                <li>Mobile app design & development</li>
+                <li>Great communication</li>
+                <li>Delivering on time</li>
+            </ul>
+            <h2 id="my-work">My work</h2>
+            <p>Here you can see samples of work that I've done</p>
+            <h4>
+                Development:
+            </h4>
             <ul>
                 <li><a href="my-work/football-ticket-shop.html">Football ticket shop</a></li>
             </ul>
+        </div>
+        
         
         <div style="display: none">
             Google Analytics events test.
