--- a/my-work/football-ticket-shop.html
+++ b/my-work/football-ticket-shop.html
@@ -4,22 +4,24 @@
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1 class="margin-bot-none">
-            Football ticket shop
-        </h1>
-        <p>
-            In this project I was tasked with developing a couple of elements for the product page.
-            I did this by custom coding Elementor widgets. All elements that you can see in the pictures
-            are custom coded Elementor widgets that I wrote myself. <br>
-            Additionally, for this website, I wrote an internal plugin that allows
-            the client to bulk import WooCommerce products and product variations from a CSV.
-        </p>
-        <br>
-        <img src="../images/football-ticket-shop/desktop.png">
-        <p class="caption">Desktop version of the Elementor widgets</p>
-        <img src="../images/football-ticket-shop/desktop.png">
-        <p class="caption">Mobile version of the Elementor widgets</p>
-
+        <div class="content">
+            <a href="../index.html">Back</a>
+            <h1>
+                Football ticket shop
+            </h1>
+            <p>
+                In this project I was tasked with developing a couple of elements for the product page.
+                I did this by custom coding Elementor widgets. All elements that you can see in the pictures
+                are custom coded Elementor widgets that I wrote myself. <br>
+                Additionally, for this website, I wrote an internal plugin that allows
+                the client to bulk import WooCommerce products and product variations from a CSV.
+            </p>
+            <br>
+            <img src="../images/football-ticket-shop/desktop.png">
+            <p class="caption">Desktop version of the Elementor widgets</p>
+            <img src="../images/football-ticket-shop/mobile.png">
+            <p class="caption">Mobile version of the Elementor widgets</p>
+        </div>
 
     </body>
 </html>
