--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@
                 from Latvia who has a deep passion for coding and design.
                 In my spare time I like to draw, cook, code and design websites.
             </p>
-            <div class="link" onclick="scrollToWork()">
+            <ul>
+                <li><a href="https://github.com/JorensM">GitHub</a></li>
+                <li><a htef="https://www.upwork.com/freelancers/~01e315dadc75c62d93">Upwork</a></li>
+                <li><a href="https://www.linkedin.com/in/jorens-merenjanu-70195b217/">LinkedIn</a></li>
+            </ul>
+            <!-- <div class="link" onclick="scrollToWork()">
                 See my work
-            </div>
+            </div> -->
             <h2>My skills</h2>
             <p>I have experience with <b>web design</b>, <b>web development</b>, <b>desktop app development</b>, <b>mobile app development</b>
                 And I have experience with many different tools, frameworks, languages, most notably:</p>
