--- a/my-work/football-ticket-shop.html
+++ b/my-work/football-ticket-shop.html
@@ -16,11 +16,17 @@
                 Additionally, for this website, I wrote an internal plugin that allows
                 the client to bulk import WooCommerce products and product variations from a CSV.
             </p>
+            <ul>
+                <li><a href='https://github.com/JorensM/matchticketshop-widgets'>Widgets source code</a></li>
+                <li><a href="https://github.com/JorensM/match-upload">CSV importer source code</a></li>
+            </ul>
             <br>
             <img src="../images/football-ticket-shop/desktop.png">
             <p class="caption">Desktop version of the Elementor widgets</p>
-            <img src="../images/football-ticket-shop/mobile.png">
-            <p class="caption">Mobile version of the Elementor widgets</p>
+            <div class="flex-col-center">
+                <img class="img-mobile" src="../images/football-ticket-shop/mobile.png">
+                <p class="caption">Mobile version of the Elementor widgets</p>
+            </div>
         </div>
 
     </body>
