--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </p>
             <ul>
                 <li><a href="https://github.com/JorensM">GitHub</a></li>
-                <li><a htef="https://www.upwork.com/freelancers/~01e315dadc75c62d93">Upwork</a></li>
+                <li><a href="https://www.upwork.com/freelancers/~01e315dadc75c62d93">Upwork</a></li>
                 <li><a href="https://www.linkedin.com/in/jorens-merenjanu-70195b217/">LinkedIn</a></li>
             </ul>
             <!-- <div class="link" onclick="scrollToWork()">
