add additional 'my work' item

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             </h4>
             <ul>
                 <li><a href="my-work/football-ticket-shop.html">Football ticket shop</a></li>
+                <li><a href="https://www.bookibo.com/">Bookibo</a>(Helped develop some pages and UI elements of the web app)</li>
             </ul>
         </div>
         
