--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             </h4>
             <ul>
                 <li><a href="my-work/football-ticket-shop.html">Football ticket shop</a></li>
-                <li><a href="https://www.bookibo.com/">Bookibo</a>(Helped develop some pages and UI elements of the web app)</li>
+                <li><a href="https://www.bookibo.com/">Bookibo</a> (Helped develop some pages and UI elements of the web app)</li>
+                <li><a href="https://www.techandbusinesstips.com/">techandbusinesstips.com</a> - My personal blog</li>
             </ul>
         </div>
         
