--- a/index.html
+++ b/index.html
@@ -71,13 +71,16 @@
 
             const skills_list = [
                 "PHP",
+                "JavaScript/TypeScript",
                 "HTML",
                 "CSS",
-                "Angular",
+                "React",
+                "NodeJS",
+                "Next.js",
                 "Java",
                 "React Native",
-                "Android SDK",
-                "Golang"
+                "WordPress",
+                "Godot"
             ];
             const skills_list_element = document.getElementById("skills-list");
 
