--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 <li>Website design & development (backend & frontend)</li>
                 <li>Dekstop app design & development</li>
                 <li>Mobile app design & development</li>
-                <li>Great communication</li>
+                <li>4 years of professional web development experience</li>
+                <li>Frequent and honest communication</li>
+                <li>Clean, scalable, maintainable and well-documented code</li>
                 <li>Delivering on time</li>
             </ul>
             <h2 id="my-work">My work</h2>
