--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
                 Hi! I'm Jorens. I'm a full stack developer & designer
                 from Latvia who has a deep passion for coding and design.
                 In my spare time I like to draw, cook, code and design websites.
+
+                But I'm more than just a developer - I have an entrepreneural mindset.
+                I try to contribute to the project and business as a whole in any way I can,
+                because I believe that the success of my clients leads to my own success.
+
+                I will go out of my way to overdeliver, take initiative where appropriate,
+                offer suggestions and share my perspective.
             </p>
             <ul>
                 <li><a href="https://github.com/JorensM">GitHub</a></li>
