--- a/my-work/football-ticket-shop.html
+++ b/my-work/football-ticket-shop.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="../style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div class="content">
+        <header>
+            <h1>Jorens Merenjanu</h1>
+            <p role='doc-subtitle'>Full Stack Web Developer</p>
+        </header>
+        <main class="content project">
             <a href="../index.html">Back</a>
             <h1>
                 Football ticket shop
@@ -22,12 +27,10 @@
             </ul>
             <br>
             <img src="../images/football-ticket-shop/desktop.png">
-            <p class="caption">Desktop version of the Elementor widgets</p>
             <div class="flex-col-center">
                 <img class="img-mobile" src="../images/football-ticket-shop/mobile.png">
-                <p class="caption">Mobile version of the Elementor widgets</p>
             </div>
-        </div>
+        </main>
 
     </body>
 </html>
