--- a/index.html
+++ b/index.html
@@ -24,12 +24,47 @@
                     Hi, my name is Jorens. I'm a full stack web developer with 4 years
                     of professional experience.
                 </p>
-                <ul>
+                <ul class='links'>
                     <li><a href="mailto:jorensmerenjanu@gmail.com">Email</a></li>
                     <li><a href="https://jorens.short.gy/cv">CV</a></li>
                     <li><a href="https://github.com/JorensM">GitHub</a></li>
                     <li><a href="https://www.upwork.com/freelancers/~01e315dadc75c62d93">Upwork</a></li>
                     <li><a href="https://www.linkedin.com/in/jorens-merenjanu-70195b217/">LinkedIn</a></li>
+                </ul>
+            </section>
+            <section>
+                <h2>
+                    About Me
+                </h2>
+                <p>
+                    I'm a web developer with a mindset of an entrepreneur. I view
+                    my job more than just writing code. I try to help and support
+                    my clients in any way I can; When appropriate, I will take
+                    initiative, offer suggestions and alternatives.
+                </p>
+                <p>
+                    Although my main trade is web development, I have skills that
+                    stretch beyond that as well, skills such as marketing, UX, product
+                    design.
+                </p>
+                <p>
+                    I am very easy to work with - I am communicative, honest and
+                    responsive. I always try to keep my clients in the loop as much 
+                    as possible (without being a bother)
+                </p>
+            </section>
+            <section>
+                <h2>My skills</h2>
+                <p>
+                    Currently, I mostly work with React and Node or Next.js, but 
+                    besides that, I also have experience with:
+                </p>
+                <ul>
+                    <li>WordPress</li>
+                    <li>PHP</li>
+                    <li>Java</li>
+                    <li>Svelte/SvelteKit</li>
+                    <li>Shopify</li>
                 </ul>
             </section>
             <section>
