feat: add more tech to the list

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                     besides that, I also have experience with:
                 </p>
                 <ul>
+                    <li>React</li>
+                    <li>Next.js</li>
+                    <li>Node.js</li>
+                    <li>Express</li>
+                    <li>Deno</li>
                     <li>WordPress</li>
                     <li>PHP</li>
                     <li>Java</li>
