feat: personal projects page, improve skills list styling

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <p role='doc-subtitle'>Full Stack Web Developer</p>
         </header>
         <main>
+            <!-- External links -->
             <section>
                 <ul class='links'>
                     <li><a href="mailto:jorensmerenjanu@gmail.com">Email</a></li>
@@ -28,6 +29,14 @@
                     <li><a href="https://www.linkedin.com/in/jorens-merenjanu-70195b217/">LinkedIn</a></li>
                 </ul>
                 <hr/>
+            </section>
+            <!-- Site navigation -->
+            <section>
+                <ul>
+                    <li>
+                        <a href="personalprojects.html">Personal Projects</a>
+                    </li>
+                </ul>
             </section>
             <section>
                 <h2>
@@ -60,17 +69,51 @@
                     Currently, I mostly work with React and Node or Next.js, but 
                     besides that, I also have experience with:
                 </p>
-                <ul>
-                    <li>React</li>
-                    <li>Next.js</li>
-                    <li>Node.js</li>
-                    <li>Express</li>
-                    <li>Deno</li>
-                    <li>WordPress</li>
-                    <li>PHP</li>
-                    <li>Java</li>
-                    <li>Svelte/SvelteKit</li>
-                    <li>Shopify</li>
+                <ul class="col-2 skills">
+                    <li>
+                        <h3>
+                            Languages
+                        </h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>JavaScript/TypeScript</li>
+                            <li>CSS</li>
+                            <li>Java</li>
+                            <li>PHP</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>
+                            Full stack
+                        </h3>
+                        <ul>
+                            <li>Next.js</li>
+                            <li>WordPress</li>
+                            <li>SvelteKit</li>
+                            <li>Shopify</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>
+                            Frontend
+                        </h3>
+                        <ul>
+                            <li>React</li>
+                            <li>Svelte</li>
+                            <li>Tailwind</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>
+                            Backend
+                        </h3>
+                        <ul>
+                            <li>Node.js</li>
+                            <li>Express</li>
+                            <li>Deno</li>
+                            <li>Laravel</li>
+                        </ul>
+                    </li>
                 </ul>
             </section>
             <section>
