--- a/index.html
+++ b/index.html
@@ -117,6 +117,118 @@
                 </ul>
             </section>
             <section>
+                <h2>Specializations</h2>
+                <p>
+                    I have several areas of focus, although my work is not limited to just
+                    those and I'm always open to exploring new ones.
+                </p>
+                <ul>
+                    <li>
+                        <b>Systems and architecture design</b> - ensuring
+                        that the foundation upon which the project
+                        rests is scalable, extensible, optimized and
+                        cost-effective, and that different parts of
+                        the system interact seamlessly.
+                    </li>
+                    <li>
+                        <b>Infrastructure</b> - ensuring that the tools
+                        and platforms used for running the project
+                        are best suited for the use-case and work
+                        well together.
+                    </li>
+                    <li>
+                        <b>API design and development</b> - designing and
+                        developing logically structured APIs. 
+                    </li>
+                    <li>
+                        <b>API integration</b> - integration of various third-party
+                        (or own) APIs with the frontend or backend of the project.
+                    </li>
+                    <li>
+                        <b>Dynamic UIs/highly interactive web apps</b> - 
+                        Dashboard types of apps or SaaS, with dynamic/frequent
+                        data fetching/sending and where user interaction is
+                        frequent and needs to be fast, intuitive and seamless.
+                    </li>
+                    <li>
+                        <b>Scripts/utilities/automation</b> - Small scripts,
+                        apps or pages designed to tackle a particular recurring
+                        problem in a workflow.
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>Principles</h2>
+                <p>
+                    As a developer, I have several principles that I follow when
+                    writing code and designing systems, namely:
+                </p>
+                <ul>
+                    <li>
+                        <b>Team code</b> - I write code that is readable, well-documented and logical
+                        in the context of collaborating with other developers (even when working by myself),
+                        both for the given moment and for the future.
+                    </li>
+                    <li>
+                        <b>Independent, reusable code</b> - I favor abstract code that is not coupled
+                        to a particular third-party framework, platform or library, which makes
+                        migration to a different one, metaphorically speaking nearly as simple as
+                        pressing a button, without needing to rewrite much or anything at all.
+                    </li>
+                    <li>
+                        <b>Extensible code</b> - I write code that is easy to extend, focusing
+                        on making it easy to add new lines and making it unnecessary to rewrite
+                        existing ones.
+                    </li>
+                    <li>
+                        <b>Fast code</b> - I write code that is optimized for 
+                        time-to-first-(byte, interaction, request, response, load), in other
+                        words reducing the time spent just waiting for the software to finish
+                        its task, without the expense of other features like readability or
+                        extensibility.
+                    </li>
+                    <li>
+                        <b>Scalable code</b> - I write code that is fundamentally designed
+                        to work well and without friction in large complex systems, favoring
+                        a modular approach.
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>My proccess</h2>
+                <p>
+                    When I work on projects and/or with clients, my workflow is Agile-like
+                    and typically consists of a flexible/open-ended cycle composed of the following steps:
+                </p>
+                <ol>
+                    <li>
+                        <b>Define feature/task/milestone/goal/project</b> - A client might request
+                        for a task to be done by me, at which point I either clarify requirements
+                        if they are not clear enough and/or offer suggestions/alternatives before
+                        moving onto the next step
+                    </li>
+                    <li>
+                        <b>Define an abstract design for feature and plan of action towards fulfilling it</b> -
+                        At this point I "blueprint" the base/core of the feature or task, defining
+                        the core characteristics, potential room for variation, make sure that I have everything I need to get it done,
+                        and defining a clear picture of how to achieve it
+                    </li>
+                    <li>
+                        <b>Develop an MVP of the feature based on the abstract design</b> - Develop an
+                        MVP of the feature, something that outlines the core characteristics of the feature
+                        while also making it easy to customize the feature for revision or future changes.
+                    </li>
+                    <li>
+                        <b>Receive feedback</b> - Collect and analyze feedback/criticism from the client
+                    </li>
+                    <li>
+                        <b>Iterate or move on to the next task</b> - If the client is satisfied with
+                        the outcome, move onto the next task. If changes are requested, re-iterate until
+                        expected outcome is achieved.
+                    </li>
+                </ol>
+            </section>
+            <section>
                 <!-- <a href='./my-work/index.html'>All Projects</a> -->
                 <h2>Recent Work</h2>
                 
