feat: add a 'book consultation' link

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                     responsive. I always try to keep my clients in the loop as much 
                     as possible (without being a bother)
                 </p>
+                <div class="cta">
+                    <a class='btn-primary' href="https://calendly.com/jorensmerenjanu/30-minute-meeting">
+                        Book a consultation
+                    </a>
+                    <span style="color: rgb(58, 58, 58);">15$/h</span>
+                </div>
             </section>
             <section>
                 <h2>My skills</h2>
