fix: open link in new tab

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     as possible (without being a bother)
                 </p>
                 <div class="cta">
-                    <a class='btn-primary' href="https://calendly.com/jorensmerenjanu/30-minute-meeting">
+                    <a target="_blank" class='btn-primary' href="https://calendly.com/jorensmerenjanu/30-minute-meeting">
                         Book a consultation
                     </a>
                     <span style="color: rgb(58, 58, 58);">15$/h</span>
