feat: improve style of cta button

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a target="_blank" class='btn-primary' href="https://calendly.com/jorensmerenjanu/30-minute-meeting">
                         Book a consultation
                     </a>
-                    <span style="color: rgb(58, 58, 58);">15$/h</span>
+                    <span class='cta-side' style="color: rgb(58, 58, 58);">10&euro;/h</span>
                 </div>
             </section>
             <section>
