feat: various updates: A/B test, move links to top nav, update styling, add country to bio

--- a/my-work/index.html
+++ b/my-work/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="../style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Projects - Jorens Merenjanu</title>
     </head>
     <body>
         <header>
@@ -11,6 +12,7 @@
         </header>
         <main class="content project">
             <a href="../index.html">Back</a>
+            <p>More projects can be found in my <a href="https://jorens.short.gy/cv">CV</a></p>
             <h2>
                 My Work
             </h>
