--- a/personalprojects.html
+++ b/personalprojects.html
@@ -12,6 +12,7 @@
             
               gtag('config', 'G-97G01186E7');
             </script>
+        <title>Personal Projects - Jorens Merenjanu</title>
     </head>
     <body>
         <header>
