implement templating and localization and start working on translations

--- a/index_lv.html
+++ b/index_lv.html
@@ -16,7 +16,7 @@
     <body>
         <script src="./template.js"></script>
         <script>
-            renderPage("./landing_template.html");
+            renderPage("./landing_template.html", "lv");
         </script>
     </body>
 </html>
