--- a/index_.html
+++ b/index_.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel='stylesheet' href='style.css' />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-97G01186E7"></script>
+            <script>
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+            
+              gtag('config', 'G-97G01186E7');
+            </script>
+        <title>Jorens Merenjanu - Web Developer</title>
+    </head>
+    <body>
         <header>
             <h1>Jorens Merenjanu</h1>
             <p role='doc-subtitle'>Full Stack Web Developer</p>
@@ -23,10 +40,14 @@
                     About Me
                 </h2>
                 <p>
-                    {{content.intro1}}
+                    Hi, my name is Jorens. I'm a full stack web developer from Latvia with 4 years
+                    of professional experience.
                 </p>
                 <p>
-                    {{content.intro2}}
+                    I'm a web developer with a mindset of an entrepreneur. I view
+                    my job more than just writing code. I try to help and support
+                    my clients in any way I can; When appropriate, I will take
+                    initiative, offer suggestions and alternatives.
                 </p>
                 <p>
                     Although my main trade is web development, I have skills that
@@ -239,3 +260,7 @@
                 </ol>
             </section>
         </main>
+        <footer>
+        </footer>
+    </body>
+</html>
