--- a/landing_template.html
+++ b/landing_template.html
@@ -29,20 +29,16 @@
                     {{content.intro2}}
                 </p>
                 <p>
-                    Although my main trade is web development, I have skills that
-                    stretch beyond that as well, skills such as marketing, UX, product
-                    design.
+                    {{content.intro3}}
                 </p>
                 <p>
-                    I am very easy to work with - I am communicative, honest and
-                    responsive. I always try to keep my clients in the loop as much 
-                    as possible (without being a bother)
+                    {{content.intro4}}
                 </p>
                 <div class="cta">
                     <a target="_blank" class='btn-primary' href="https://calendly.com/jorensmerenjanu/30-minute-meeting">
                         Book a consultation
                     </a>
-                    <!-- <span class='cta-side' style="color: rgb(58, 58, 58);">4&euro;/h</span> -->
+                    <span class='cta-side' style="color: rgb(58, 58, 58);">20&euro;/h</span>
                 </div>
             </section>
             <section>
@@ -76,8 +72,7 @@
             <section>
                 <h2>My skills</h2>
                 <p>
-                    Currently, I mostly work with React and Node or Next.js, but 
-                    besides that, I also have experience with:
+                    {{content.skills.intro}}
                 </p>
                 <ul class="col-2 skills">
                     <li>
@@ -129,61 +124,48 @@
             <section>
                 <h2>Specializations</h2>
                 <p>
-                    I have several areas of focus, although my work is not limited to just
-                    those and I'm always open to exploring new ones.
+                    {{content.specializations.intro}}
                 </p>
                 <ul>
                     <li>
-                        <b>Systems and architecture design</b> - ensuring
-                        that the foundation upon which the project
-                        rests is scalable, extensible, optimized and
-                        cost-effective, and that different parts of
-                        the system interact seamlessly.
+                        <b>{{content.specializations.systems.name}}</b> - 
+                        {{content.specializations.systems.description}}
                     </li>
                     <li>
-                        <b>Infrastructure</b> - ensuring that the tools
-                        and platforms used for running the project
-                        are best suited for the use-case and work
-                        well together.
+                        <b>{{content.specializations.infrastructure.name}}</b> - 
+                        {{content.specializations.infrastructure.description}}
                     </li>
                     <li>
-                        <b>API design and development</b> - designing and
-                        developing logically structured APIs. 
+                        <b>{{content.specializations.apidesign.name}}</b> - 
+                        {{content.specializations.apidesign.description}} 
                     </li>
                     <li>
-                        <b>API integration</b> - integration of various third-party
-                        (or own) APIs with the frontend or backend of the project.
+                        <b>{{content.specializations.apiintegration.name}}</b> - 
+                        {{content.specializations.apiintegration.description}}
                     </li>
                     <li>
-                        <b>Dynamic UIs/highly interactive web apps</b> - 
-                        Dashboard types of apps or SaaS, with dynamic/frequent
-                        data fetching/sending and where user interaction is
-                        frequent and needs to be fast, intuitive and seamless.
+                        <b>{{content.specializations.dynamicui.name}}</b> - 
+                        {{content.specializations.dynamicui.description}}
                     </li>
                     <li>
-                        <b>Scripts/utilities/automation</b> - Small scripts,
-                        apps or pages designed to tackle a particular recurring
-                        problem in a workflow.
+                        <b>{{content.specializations.utilities.name}}</b> - 
+                        {{content.specializations.utilities.description}}
                     </li>
                 </ul>
             </section>
             <section>
                 <h2>Principles</h2>
                 <p>
-                    As a developer, I have several principles that I follow when
-                    writing code and designing systems, namely:
+                    {{content.principles.intro}}
                 </p>
                 <ul>
                     <li>
-                        <b>Team code</b> - I write code that is readable, well-documented and logical
-                        in the context of collaborating with other developers (even when working by myself),
-                        both for the given moment and for the future.
+                        <b>{{content.principles.teamcode.name}}</b> - 
+                        {{content.principles.teamcode.description}}
                     </li>
                     <li>
-                        <b>Independent, reusable code</b> - I favor abstract code that is not coupled
-                        to a particular third-party framework, platform or library, which makes
-                        migration to a different one, metaphorically speaking nearly as simple as
-                        pressing a button, without needing to rewrite much or anything at all.
+                        <b>{{content.principles.independentcode.name}}</b> - 
+                        {{content.principles.independentcode.description}}
                     </li>
                     <li>
                         <b>Extensible code</b> - I write code that is easy to extend, focusing
