move subtitle to heading element for SEO

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     </head>
     <body>
         <header>
-            <h1>Jorens Merenjanu</h1>
-            <p role='doc-subtitle'>Full Stack Web Developer</p>
+            <h1>
+                Jorens Merenjanu
+                <p role='doc-subtitle'>Full Stack Web Developer</p>
+            </h1>
         </header>
         <main>
             <!-- External links -->
